--- a/main/skin/default/_note_messages.tmpl
+++ b/main/skin/default/_note_messages.tmpl
@@ -11,7 +11,7 @@
 <input type="hidden" name="wait" value="<tmpl_var wait>"/>
 <input type="hidden" name="page" value="<tmpl_var page>"/>
 
-<input type="hidden" name="r_msg_id" value="<tmpl_var msg_id>"/>
+<tmpl_unless is_conversation><input type="hidden" name="r_msg_id" value="<tmpl_var msg_id>"/></tmpl_unless>
 <div class="note">"<tmpl_var msg>"</div>
 <div class="sender"><tmpl_if is_sent>To:<tmpl_else>From:</tmpl_if> <tmpl_include _name_id.tmpl> @ <tmpl_var sent_time></div>
 
@@ -19,7 +19,7 @@
 <label>답장</label>
 <input type="hidden" name="to" value="<tmpl_var id>"/>
 <textarea name="msg" rows="3" cols="60" class="focus"></textarea>
-<input type="submit" name="action" value="Delete+Reply" />
+<!--<input type="submit" name="action" value="Delete+Reply" />-->
 <input type="submit" name="action" value="Save+Reply" />
 <tmpl_else>
 <tmpl_unless is_conversation>
